--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "formik": "^2.4.6",
+    "hi-base32": "^0.5.1",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.359.0",
     "next": "14.1.3",
+    "otpauth": "^9.2.4",
     "pg": "^8.11.3",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
@@ -34,6 +39,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/pg": "^8.11.4",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
