--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@auth/prisma-adapter": "^2.1.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -27,6 +27,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.359.0",
     "next": "14.1.3",
+    "next-auth": "^5.0.0-beta.17",
     "otpauth": "^9.2.4",
     "pg": "^8.11.3",
     "qrcode": "^1.5.3",
@@ -37,6 +38,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.13.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.4",
     "@types/qrcode": "^1.5.5",
@@ -45,8 +47,10 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "i": "^0.3.7",
+    "npm": "^10.7.0",
     "postcss": "^8",
-    "prisma": "^5.11.0",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
