--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.359.0",
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.17",
+    "nodemailer": "^6.9.13",
     "otpauth": "^9.2.4",
     "pg": "^8.11.3",
     "qrcode": "^1.5.3",
